Added text n images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>CV BurgerPants</title>
+		<link rel="StyleSheet" href="style.css" />
+	</head>
+	<body>
+		<div class="wrapper">
+			<div id="grid">
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+
+			<div class="header">
+				<h1>* What can I help you with today?</h1>
+			</div>
+			<div class="box">
+				<img src="images/Boxie Woxie.png" />
+			</div>
+			<div class="image">
+				<a href="#"> <img src="images/Burgerpants_face_2.png" /></a>
+			</div>
+
+			<div class="firstButton">
+				<a href="#">
+					<img src="images/starfait.png" />
+				</a>
+			</div>
+			<div class="secondButton">
+				<a href="#">
+					<img src="images/glamburger.png" />
+				</a>
+			</div>
+			<div class="thirdButton">
+				<a href="#">
+					<img src="images/face steak.png" />
+				</a>
+			</div>
+			<div class="fourthButton">
+				<a href="#">
+					<img src="images/legendary hero.png" />
+				</a>
+			</div>
+		</div>
+	</body>
+</html>
