--- a/index.html
+++ b/index.html
@@ -34,35 +34,40 @@
 				<p></p>
 				<p></p>
 			</div>
-
 			<div class="header">
-				<h1>* What can I help you with today?</h1>
+				<a href="index.html"> What's going on, little buddy?</a>
 			</div>
 			<div class="box">
 				<img src="images/Boxie Woxie.png" />
 			</div>
 			<div class="image">
-				<a href="#"> <img src="images/Burgerpants_face_2.png" /></a>
+				<a href="#"> <img src="images/Burgerpants_face_smoking.png" /></a>
 			</div>
 
 			<div class="firstButton">
-				<a href="#">
-					<img src="images/starfait.png" />
+				<a href="motivation.html">
+					<img src="images/starfait.png" alt="Starfait" />
 				</a>
 			</div>
 			<div class="secondButton">
-				<a href="#">
-					<img src="images/glamburger.png" />
+				<a href="skillz.html">
+					<img src="images/glamburger.png" alt="Glamburger" />
 				</a>
 			</div>
 			<div class="thirdButton">
-				<a href="#">
-					<img src="images/face steak.png" />
+				<a href="wadafak.html">
+					<img
+						src="images/face steak.png"
+						alt="Steak in the shape of Mettaton's face"
+					/>
 				</a>
 			</div>
 			<div class="fourthButton">
-				<a href="#">
-					<img src="images/legendary hero.png" />
+				<a href="food.html">
+					<img
+						src="images/legendary hero.png"
+						alt="Legendary hero (sandwich)"
+					/>
 				</a>
 			</div>
 		</div>
